AC-1134: Avoid line wrapping on workflow post function view rows
* Caused by the iframe container div locking heads with a hidden button element which resulted in wrapping
* Split out workflow rendering templates into create/view/edit

--- a/plugin/src/main/resources/css/iframe/host.css
+++ b/plugin/src/main/resources/css/iframe/host.css
@@ -58,3 +58,8 @@
   padding: 0;
   font-size: 0;
 }
+
+/* Sets JIRA workflow post function "view" to not break over lines (caused by hidden buttons which float right) */
+.ap-postFunction > .ap-container {
+    margin-right: 120px;
+}
